--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+.nav-bar-link.active{
+  @apply bg-yellow-300;
+} 
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
